--- a/src/main/webapp/WEB-INF/jsp/Style.css
+++ b/src/main/webapp/WEB-INF/jsp/Style.css
@@ -1,6 +1,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Concert+One&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 *{
     margin: 0;
     padding:0;
@@ -10,6 +10,15 @@ body{
     width: 100%;
     height: 100vh;
 }
+header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 60px;
+}
+.img-header{
+    width: 100px;
+}
 .section_header{
     margin-top: 10px;
     background: url("https://i.ibb.co/yktZS4H/Qu-est-ce-que-le-Lorem-Ipsum-Le-Lorem-Ipsum-est-simplement-du-faux-texte-employ-dans-la-composition.png") no-repeat top right/cover;
@@ -18,9 +27,21 @@ body{
     display: flex;
     justify-content: space-around;
 }
-.section_header_img img{
+.section_header_img img {
     width: 100%;
+    animation: salma 1s ease-in-out infinite;
+}
 
+@keyframes salma {
+    0%{
+        transform: translateY(-10px);
+    }
+50%{
+    transform: translateY(10px);
+}
+    100% {
+        transform: translateY(-10px);
+    }
 }
 .section_header_img{
     width: 40%;
@@ -30,7 +51,7 @@ body{
 
     width: 50%;
     display: flex;
- flex-direction: column;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
@@ -58,19 +79,18 @@ body{
     align-items: end;
     justify-content: end;
     margin-top: 15px;
-
-
 }
 
-.navbar a {
-
+.navbar a{
     color: #ad6abd;
     padding: 14px 14px;
     text-decoration: none;
+    transition: .5s;
+    margin: 0 4px;
 }
 
 
-.navbar a:hover {
+.navbar a:hover,#a1{
     background-color: #d38ce3;
     color: #fff8f8;
     border-radius: 30px;
@@ -174,17 +194,16 @@ button:hover {
 .section_cards_student{
     width: 100%;
     height: 70%;
-    background: red;
     display: flex;
     align-items: center;
     text-align: center;
     justify-content: center;
 
+
 }
 .section_cards_student-wrapper{
     width: 80%;
     height: 98%;
-    background: green;
     display: flex;
     padding: 20px;
     align-items: center;
@@ -192,21 +211,104 @@ button:hover {
 }
 .card{
     width: 27%;
-    padding: 10px 14px;
-    color: orangered;
+    padding: 10px 0;
+    border-radius: 12px;
+    box-shadow: 2px 2px 10px #a6a6a6;
 }
-.card > p{
-    padding: 8px 10px;
-    color: white;
-    background: #ad6abd;
+.card > .card-des > p{
+    padding:5px 7px;
+    color: #c092cb;
+    font-size: 9px;
+    border: 1px solid #c092cb ;
     border-radius: 5px;
+    font-family: "Concert One", sans-serif;
+    margin: 5px;
+    margin-top: -40px;
+    width: 80px;
+    box-shadow: 2px 2px 10px #bebbbb;
+}
+.card > .card-des > span{
+    padding:5px 7px;
+    color: #c092cb;
+    font-size: 9px;
+    border: 1px solid #c092cb ;
+    border-radius: 5px;
+    font-family: "Concert One", sans-serif;
+    margin: 5px;
+    margin-top: -40px;
+    width: 140px;
+    box-shadow: 2px 2px 10px #bebbbb;
 }
 .card-img{
-    width: 100%;
-    height: 200px;
+    width: 90%;
+    height: 250px;
     border-radius: 15px;
+    margin: 0 auto;
 }
 .card-img > img {
+    margin-top: -50px;
     border-radius: 15px;
-    height: 200px;
+    height: 250px;
+    box-shadow: 4px 3px 15px #8d8c8c;
+}
+.card-info{
+    text-align: left;
+}
+.card-des{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+}
+.card-info > h2{
+    padding-left: 30px;
+    font-size: 27px;
+    font-weight: 900;
+    color: black;
+    font-family: "Poppins", sans-serif;
+}
+
+.cd{
+    padding-top: 5px;
+    border: 2px solid #c092cb;
+    background: #c092cb;
+    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    height: 1px;
+    cursor: pointer;
+    transition: 0.6s;
+    text-align: center;
+}
+.cd > h3 , h4{
+    font-size: 12px;
+    font-weight: 500;
+    color: black;
+    font-family: "Poppins", sans-serif;
+}
+.cd:hover{
+    height: 50px;
+    transition: 0.6s;
+}
+.showMore{
+    padding: 12px 25px;
+    border-radius: 4px;
+    color: black;
+    border: 2px solid #c092cb;
+    margin: 0 auto;
+    background: transparent;
+    transition: .5s;
+    cursor: pointer;
+    font-weight: 800;
+}
+.showMore:hover{
+    background: #f1dffd;
+}
+.More{
+    margin-top: -50px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
 }
