--- a/src/main/webapp/WEB-INF/jsp/Style.css
+++ b/src/main/webapp/WEB-INF/jsp/Style.css
@@ -100,7 +100,7 @@ header{
     text-align: center;
     font-weight: 800;
     font-size: 30px;
-    width: 200px;
+    width: 350px;
     padding: 30px 0;
     margin: 0 auto;
 }
@@ -195,6 +195,7 @@ button:hover {
     width: 100%;
     height: 70%;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     text-align: center;
     justify-content: center;
@@ -207,7 +208,9 @@ button:hover {
     display: flex;
     padding: 20px;
     align-items: center;
-    justify-content: space-between;
+    justify-content:space-evenly;
+    flex-wrap: wrap;
+    margin-top: 59px;
 }
 .card{
     width: 27%;
