--- a/src/main/webapp/WEB-INF/jsp/Style.css
+++ b/src/main/webapp/WEB-INF/jsp/Style.css
@@ -9,23 +9,37 @@
 body{
     width: 100%;
     height: 100vh;
+    position: relative;
 }
 header{
     display: flex;
+    margin: 0 auto;
     align-items: center;
     justify-content: space-between;
     padding: 0 60px;
+    background: rgba(192, 166, 197, 0.51);
+    border-radius: 40px;
+    width: 80%;
+    margin-bottom: 20px;
+
+    backdrop-filter: blur(14px);
 }
 .img-header{
     width: 100px;
 }
-.section_header{
-    margin-top: 10px;
+.main{
     background: url("https://i.ibb.co/yktZS4H/Qu-est-ce-que-le-Lorem-Ipsum-Le-Lorem-Ipsum-est-simplement-du-faux-texte-employ-dans-la-composition.png") no-repeat top right/cover;
+    padding-top: 15px;
+    width: 100%;
+    height: 800px;
+}
+.section_header{
+
     width: 100%;
     height: 700px;
     display: flex;
     justify-content: space-around;
+
 }
 .section_header_img img {
     width: 100%;
@@ -48,42 +62,42 @@ header{
     padding: 70px;
 }
 .section_header_text{
-
     width: 50%;
+    padding-left: 40px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
-.section_header_text h1{
-    font-family: "Concert One", sans-serif;
-    font-size: 35px;
-    text-align: center;
-    margin-bottom:  20px;
-    width: 70%;
-    font-weight: bolder;
-}
-.section_header_text p{
-    width: 80%;
-    background-color: rgba(217, 217, 217, 0.3);
-    padding: 12px;
-    border-radius: 25px;
-    font-weight: bold;
 
+.section_header_text h2{
+    font-family:"Poppins",sans-serif;
+    font-size: 50px;
+   font-weight: 800;
+    margin-bottom:  20px;
+    text-align: left;
+    color: rgba(255, 255, 255, 0.58);
+    text-shadow: 8px 8px 10px rgba(0, 0, 0, 0.47);
+
+}
+em{
+    color: rgba(54, 28, 61, 0.75);
 
 }
 .navbar {
     padding: 5px 40px;
     overflow: hidden;
     display: flex;
-    align-items: end;
+    align-items: center;
     justify-content: end;
-    margin-top: 15px;
+
+
 }
 
 .navbar a{
+    font-family: "Poppins", sans-serif;
     color: #ad6abd;
-    padding: 14px 14px;
+    padding: 10px 10px;
     text-decoration: none;
     transition: .5s;
     margin: 0 4px;
@@ -163,7 +177,7 @@ input::placeholder{
 
 
 button:hover {
-    background-color: #0056b3;
+    background-color: rgba(124, 102, 129, 0.75);
 }
 .section_formulaire{
     display: flex;
@@ -208,15 +222,19 @@ button:hover {
     display: flex;
     padding: 20px;
     align-items: center;
+
     justify-content:space-evenly;
     flex-wrap: wrap;
     margin-top: 59px;
+
+
 }
 .card{
     width: 27%;
     padding: 10px 0;
     border-radius: 12px;
     box-shadow: 2px 2px 10px #a6a6a6;
+    margin-bottom: 60px;
 }
 .card > .card-des > p{
     padding:5px 7px;
@@ -256,20 +274,49 @@ button:hover {
 }
 .card-info{
     text-align: left;
+
 }
+.card-info .card-name{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    padding: 1px 20px;
+    align-items: center;
+}
+.card-info .card-name h2{
+
+    font-size: 20px;
+    font-weight: 900;
+    color: black;
+    font-family: "Poppins", sans-serif;
+
+}
+.card-info .card-name .icon{
+    display: flex;
+    width: 22%;
+    justify-content: space-between;
+    align-items: center;
+     height:100%;
+
+}
+.card-info .card-name .icon a{
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
+    transition: .5s;
+}
+.card-info .card-name .icon a:hover{
+    transform: scale(1.1);
+}
+
+
 .card-des{
     display: flex;
     justify-content: space-around;
     align-items: center;
 
 }
-.card-info > h2{
-    padding-left: 30px;
-    font-size: 27px;
-    font-weight: 900;
-    color: black;
-    font-family: "Poppins", sans-serif;
-}
+
 
 .cd{
     padding-top: 5px;
@@ -314,4 +361,7 @@ button:hover {
     align-items: center;
     text-align: center;
     justify-content: center;
+}
+.modify{
+
 }
